# ghitdesk

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts
apps/api/: .env.example  README.md  pyproject.toml
apps/api/conversations/: admin.py  consumers.py  models.py  serializers.py  urls.py  views.py
apps/api/core/: asgi.py  auth.py  celery.py  routing.py  settings.py  urls.py  wsgi.py
apps/api/tenants/: admin.py  models.py
apps/api/tenants/management/commands/: create_tenant.py
apps/api/tickets/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/web/: .env.example  .env.local.example  .eslintrc.js  README.md  middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: auth.ts  bff-fetcher.ts
apps/web/types/: next-auth.d.ts
docs/: architecture.md  checklist.md  manifesto.md  roadmap.md  security.md
ops/compose/: README.md
ops/otel/: collector.yaml
ops/scripts/: Makefile  README.md
platform/charts/: README.md
platform/docker/: compose.dev.yml
platform/helm/: README.md
platform/k8s/: README.md
shared/lib/: README.md
shared/tokens/: README.md  ghitdesk.tokens.json  package.json  style-dictionary.config.cjs
src/: App.tsx  index.css
src/components/inbox/: composer.tsx  conversation-list-item.tsx  message-bubble.tsx
src/components/kpi/: kpi-stat.tsx
src/pages/: Contacts.tsx  Dashboard.tsx  Inbox.tsx  Login.tsx  Tasks.tsx  Tickets.tsx
(+41 files in other folders)
